Adding API endpoint, rebuild docs
